syntax = "proto3";

package flashcardpb;
option go_package = "./;flashcardpb";

message Board {
  int64 board_id = 1;
  int64 parent_id = 2;
  string name = 3;
  string creator = 4;
  repeated string users = 5;
}

message GetFlashcardByIdRequest {
  int64 flashcard_id = 1;
}

message GetFlashcardsRequest {
  string creator = 1;
  int64 board = 2;
}

message GetFlashcardByIdResponse {
  int64 flashcard_id = 1;
  string title = 3;
  string answer = 4;
  string board = 5;
  string creator = 6;
}

message CreateFlashcardRequest {
  string title = 1;
  string answer = 2;
  int64 board = 3;
}

message UpdateFlashcardRequest {
  int64 flashcard_id = 1;
  string title = 2;
  string answer = 3;
  int64 board = 4;
}

message DeleteFlashcardRequest {
  int64 flashcard_id = 1;
}

message Default {
  bool success = 1;
  string error = 2;
}

service FlashcardService {
  rpc GetFlashcardById(GetFlashcardByIdRequest) returns (GetFlashcardByIdResponse) {}
  rpc GetFlashcards(GetFlashcardsRequest) returns (stream GetFlashcardByIdResponse) {}
  rpc CreateFlashcard(CreateFlashcardRequest) returns (Default) {}
  rpc UpdateFlashcard(UpdateFlashcardRequest) returns (Default) {}
  rpc DeleteFlashcard(DeleteFlashcardRequest) returns (Default) {}
}
